--- a/app/src/main/res/drawable/bg_bottom_app_bar.xml
+++ b/app/src/main/res/drawable/bg_bottom_app_bar.xml
@@ -7,4 +7,8 @@
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
 
+    <stroke
+        android:width="10dp"
+        android:color="@color/primary_color" />
+
 </shape>
