--- a/app/src/main/res/layout/item_forum_post.xml
+++ b/app/src/main/res/layout/item_forum_post.xml
@@ -6,7 +6,8 @@
         android:id="@+id/cl_item_forum_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:layout_marginBottom="8dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_avatar"
@@ -31,11 +32,13 @@
 
         <TextView
             android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="what's on your mind?"
+            android:textAlignment="viewStart"
             android:textColor="@android:color/black"
             android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_time"
             app:layout_constraintStart_toStartOf="@+id/tv_name"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
@@ -52,6 +55,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_name" />
 
+        <ImageView
+            android:id="@+id/iv_post"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginVertical="12dp"
+            android:background="@drawable/ic_launcher_foreground"
+            android:visibility="gone"
+            app:layout_constraintDimensionRatio="4:3"
+            app:layout_constraintEnd_toEndOf="@+id/tv_time"
+            app:layout_constraintStart_toStartOf="@+id/tv_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_content" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -59,7 +74,7 @@
             android:layout_marginVertical="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_content">
+            app:layout_constraintTop_toBottomOf="@+id/iv_post">
 
             <ImageButton
                 android:id="@+id/ib_like"
@@ -72,8 +87,7 @@
                 android:src="@drawable/bg_like_post"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@android:color/black" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_like"
