--- a/app/src/main/res/layout/layout_create_post.xml
+++ b/app/src/main/res/layout/layout_create_post.xml
@@ -55,6 +55,18 @@
             app:layout_constraintStart_toEndOf="@id/iv_avatar"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
+        <ImageView
+            android:id="@+id/iv_post"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginVertical="12dp"
+            android:background="@drawable/ic_launcher_foreground"
+            android:visibility="gone"
+            app:layout_constraintDimensionRatio="4:3"
+            app:layout_constraintEnd_toEndOf="@+id/et_content"
+            app:layout_constraintStart_toStartOf="@+id/et_content"
+            app:layout_constraintTop_toBottomOf="@+id/et_content" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
