--- a/app/src/main/res/layout/tb_lesson_fragment.xml
+++ b/app/src/main/res/layout/tb_lesson_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/tbLesson"
@@ -13,8 +14,7 @@
             android:id="@+id/clLesson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="24dp"
-           >
+            android:paddingHorizontal="24dp">
 
             <ImageButton
                 android:id="@+id/ibBack"
