--- a/app/src/main/res/navigation/book_navigation.xml
+++ b/app/src/main/res/navigation/book_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/lessonFragment"
         android:name="com.example.hwaa.presentation.fragment.main.book.LessonFragment"
         android:label="LessonFragment"
-        tools:layout="@layout/fragment_lesson" />
+        tools:layout="@layout/fragment_lesson" >
+        <action
+            android:id="@+id/action_lessonFragment_to_quizFragment"
+            app:destination="@id/quizFragment" />
+    </fragment>
     <fragment
         android:id="@+id/lessonListFragment"
         android:name="com.example.hwaa.presentation.fragment.main.book.LessonsFragment"
@@ -22,6 +26,14 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/from_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/quizFragment"
+        android:name="com.example.hwaa.presentation.fragment.main.book.QuizFragment"
+        android:label="QuizFragment" >
+        <action
+            android:id="@+id/action_quizFragment_to_lessonListFragment"
+            app:destination="@id/lessonListFragment" />
     </fragment>
 
 </navigation>
