--- a/app/src/main/res/layout/cv_flash_card.xml
+++ b/app/src/main/res/layout/cv_flash_card.xml
@@ -7,12 +7,51 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cv_lesson_front"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="32dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/bottom_background_corner_radius"
+            app:cardPreventCornerOverlap="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+                <ImageView
+                    android:id="@+id/iv_word_image"
+                    android:layout_width="256dp"
+                    android:layout_height="256dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="32dp"
+                    android:src="@drawable/ic_launcher_foreground" />
+
+                <TextView
+                    android:id="@+id/tv_chinese_character"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Chinese Character"
+                    android:textColor="@color/black"
+                    android:textSize="24sp" />
+
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_lesson_back"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="32dp"
-            android:elevation="0dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/bottom_background_corner_radius"
             app:cardPreventCornerOverlap="false"
@@ -26,6 +65,15 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_pinyin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Pinyin"
+                    android:textColor="@color/black"
+                    android:textSize="24sp" />
+
+                <TextView
                     android:id="@+id/tv_meaning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -33,11 +81,7 @@
                     android:layout_marginTop="16dp"
                     android:text="Meaning"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_example_sentence"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/tv_example_sentence"
@@ -56,52 +100,5 @@
         </androidx.cardview.widget.CardView>
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_lesson_front"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="32dp"
-            android:elevation="0dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="@dimen/bottom_background_corner_radius"
-            app:cardPreventCornerOverlap="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/tv_chinese_character"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="汉字"
-                    android:textColor="@color/black"
-                    android:textSize="52sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_pinyin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="hànzì"
-                    android:textColor="@color/black"
-                    android:textSize="32sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_chinese_character" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
     </FrameLayout>
 </layout>
