--- a/app/src/main/res/layout/item_challenge.xml
+++ b/app/src/main/res/layout/item_challenge.xml
@@ -21,8 +21,10 @@
             android:weightSum="1">
 
             <ImageView
+                android:id="@+id/ivChallengeIcon"
                 android:layout_width="48dp"
-                android:layout_height="48dp" />
+                android:layout_height="48dp"
+                android:layout_gravity="end"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -31,6 +33,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvChallengeTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Vocabulary\nTreasure Hunt"
@@ -39,6 +42,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvChallengeDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
