--- a/app/src/main/res/layout/item_lesson_current_level.xml
+++ b/app/src/main/res/layout/item_lesson_current_level.xml
@@ -99,6 +99,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnContinueStudying"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
