--- a/app/src/main/res/navigation/vocabulary_navigation.xml
+++ b/app/src/main/res/navigation/vocabulary_navigation.xml
@@ -12,10 +12,17 @@
         <action
             android:id="@+id/action_vocabListFragment_to_flashCardFragment"
             app:destination="@id/flashCardFragment" />
+        <action
+            android:id="@+id/action_vocabListFragment_to_testFragment"
+            app:destination="@id/testFragment" />
     </fragment>
     <fragment
         android:id="@+id/flashCardFragment"
         android:name="com.example.hwaa.presentation.fragment.main.vocabulary.FlashCardFragment"
         android:label="FlashCardFragment" />
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.example.hwaa.presentation.fragment.main.vocabulary.TestFragment"
+        android:label="TestFragment" />
 </navigation>
 
